fix double scrollbar bug

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow: hidden;
 }
 
 a {
@@ -282,6 +283,10 @@ main {
 }
 .contacts {
     height: 500px;
+}
+
+#contacts {
+    padding-bottom: 300px;
 }
   
 .contact-us {
